User Infor,Permission,Menu Category, Menu Subcategory, Login, Log Out

--- a/BGW.MANAGER/BGW.MANAGER.csproj
+++ b/BGW.MANAGER/BGW.MANAGER.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Settings\IMSSettingsManager\QualityManager.cs" />
     <Compile Include="Settings\IMSSettingsManager\ShiftInformationManager.cs" />
     <Compile Include="Settings\IMSSettingsManager\StationManager.cs" />
+    <Compile Include="Settings\SettingsManager.cs" />
     <Compile Include="Settings\UserSettingsManager\MenuPermissionManager.cs" />
     <Compile Include="Settings\UserSettingsManager\UserInformationManager.cs" />
     <Compile Include="Settings\Variable\VariableModel.cs" />
