--- a/TG.RMSCLIENT.WEB/TG.RMSCLIENT.WEB.csproj
+++ b/TG.RMSCLIENT.WEB/TG.RMSCLIENT.WEB.csproj
@@ -118,6 +118,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\CustomActionFilter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -326,7 +327,7 @@
     <Content Include="assets\videos\render-img.mp4" />
     <Content Include="CSS\style.css" />
     <Content Include="Global.asax" />
-    <Content Include="image\ajax-loader %281%29.gif" />
+    <Content Include="image\ajax-loader1.gif" />
     <Content Include="image\ajax-loader.gif" />
     <Content Include="image\facebook.gif" />
     <Content Include="JavascriptFile\Common\JQCommon.js" />
@@ -381,6 +382,7 @@
     <Content Include="JavascriptFile\js\jquery.jqGrid.min.js" />
     <Content Include="JavascriptFile\PageScript\Settings\MenuCategory.js" />
     <Content Include="JavascriptFile\PageScript\Settings\MenuPermission.js" />
+    <Content Include="JavascriptFile\PageScript\Settings\SubCategory.js" />
     <Content Include="JavascriptFile\PageScript\Settings\UserInformation.js" />
     <Content Include="JavascriptFile\PageScript\ViewMenulist.js" />
     <Content Include="JavascriptFile\plugins\grid.addons.js" />
@@ -583,6 +585,7 @@
     <Content Include="Views\Settings\UserInformation.cshtml" />
     <Content Include="Views\Settings\MenuPermission.cshtml" />
     <Content Include="Views\Settings\MenuCategory.cshtml" />
+    <Content Include="Views\Settings\MenuSubCategory.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
