--- a/TG.RMSCLIENT.WEB/Web.config
+++ b/TG.RMSCLIENT.WEB/Web.config
@@ -5,6 +5,9 @@
   -->
 
 <configuration>
+	<connectionStrings>
+		<add name="Arup" connectionString="Data Source=user\sql12;Initial Catalog=RMS;User ID=sa;Password=sa123;Integrated Security=true;" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
