--- a/BGW.MANAGER/BGW.MANAGER.csproj
+++ b/BGW.MANAGER/BGW.MANAGER.csproj
@@ -34,7 +34,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web.Mvc">
-      <HintPath>..\TG.RMSCLIENT.WEB\bin\System.Web.Mvc.dll</HintPath>
+      <HintPath>..\..\..\..\Desktop\System.Web.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
