--- a/BGW.MANAGER/BGW.MANAGER.csproj
+++ b/BGW.MANAGER/BGW.MANAGER.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Report\ReportManager.cs" />
     <Compile Include="Report\ReportViewManager.cs" />
     <Compile Include="Report\SqlConnectionManager.cs" />
+    <Compile Include="ReservationManager\ReservationManager.cs" />
     <Compile Include="Settings\EnergySettingsManager\EnergySettingsManager.cs" />
     <Compile Include="Settings\IMSSettingsManager\FurnaceManager.cs" />
     <Compile Include="Settings\IMSSettingsManager\ItemGroupManager.cs" />
@@ -76,6 +77,7 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
