--- a/BGW.MODEL/BGW.MODEL.csproj
+++ b/BGW.MODEL/BGW.MODEL.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="FoodBank\FoodMenuModel.cs" />
+    <Compile Include="FoodBank\RatingLog.cs" />
     <Compile Include="Production\ProductionEntry\DailyProductionMasterModel.cs" />
     <Compile Include="Production\ProductionEntry\DailyProductionModel.cs" />
     <Compile Include="Production\ProductionEntry\ShiftWiseProductionModel.cs" />
