--- a/BGW.MANAGER/BGW.MANAGER.csproj
+++ b/BGW.MANAGER/BGW.MANAGER.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="FoodChartMenuManager\FoodChartMenuManager.cs" />
     <Compile Include="Production\DailyProductionManager\DailyProductionManager.cs" />
     <Compile Include="Production\DailyProductionManager\ShiftWiseProductionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
