--- a/BGW.MODEL/BGW.MODEL.csproj
+++ b/BGW.MODEL/BGW.MODEL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Report\ReportModuleModel.cs" />
     <Compile Include="Report\ReportParameterModel.cs" />
     <Compile Include="Reservation\BookingModel.cs" />
+    <Compile Include="Reservation\RatingModel.cs" />
     <Compile Include="Reservation\ReservationAllocationModel.cs" />
     <Compile Include="Settings\EnergyConsumtionModel\EnergySourceModel.cs" />
     <Compile Include="Settings\EnergyConsumtionModel\EnergyUnitModel.cs" />
