--- a/TG.RMSCLIENT.WEB/TG.RMSCLIENT.WEB.csproj
+++ b/TG.RMSCLIENT.WEB/TG.RMSCLIENT.WEB.csproj
@@ -110,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BookingController.cs" />
     <Compile Include="Controllers\DashBoardController.cs" />
     <Compile Include="Controllers\FoodMenuController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
