--- a/TG.RMSCLIENT.WEB/TG.RMSCLIENT.WEB.csproj
+++ b/TG.RMSCLIENT.WEB/TG.RMSCLIENT.WEB.csproj
@@ -396,6 +396,7 @@
     <Content Include="JavascriptFile\PageScript\Settings\ReservationType.js" />
     <Content Include="JavascriptFile\PageScript\Settings\SubCategory.js" />
     <Content Include="JavascriptFile\PageScript\Settings\UserInformation.js" />
+    <Content Include="JavascriptFile\PageScript\SubMenuCategoryWise.js" />
     <Content Include="JavascriptFile\PageScript\ViewMenulist.js" />
     <Content Include="JavascriptFile\plugins\grid.addons.js" />
     <Content Include="JavascriptFile\plugins\grid.postext.js" />
