--- a/BGW.MODEL/BGW.MODEL.csproj
+++ b/BGW.MODEL/BGW.MODEL.csproj
@@ -44,6 +44,7 @@
     <Compile Include="FoodBank\FoodMenuModel.cs" />
     <Compile Include="FoodBank\RatingLog.cs" />
     <Compile Include="Menu\FoodChartMenuModel.cs" />
+    <Compile Include="Menu\FoodMenuCategoryWiseModel.cs" />
     <Compile Include="Production\ProductionEntry\DailyProductionMasterModel.cs" />
     <Compile Include="Production\ProductionEntry\DailyProductionModel.cs" />
     <Compile Include="Production\ProductionEntry\ShiftWiseProductionModel.cs" />
