--- a/TG.RMSCLIENT.WEB/TG.RMSCLIENT.WEB.csproj
+++ b/TG.RMSCLIENT.WEB/TG.RMSCLIENT.WEB.csproj
@@ -258,6 +258,8 @@
     <Content Include="assets\img\menu\item-7.jpg" />
     <Content Include="assets\img\menu\item-8.jpg" />
     <Content Include="assets\img\menu\item-9.jpg" />
+    <Content Include="assets\img\menu\Star-blank.jpg" />
+    <Content Include="assets\img\menu\Star-Shape.png" />
     <Content Include="assets\img\news\1.jpg" />
     <Content Include="assets\img\news\2.jpg" />
     <Content Include="assets\img\news\3.jpg" />
