--- a/BGW.MODEL/BGW.MODEL.csproj
+++ b/BGW.MODEL/BGW.MODEL.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Settings\UserSettingsModel\MenuPermissionModel.cs" />
     <Compile Include="Settings\UserSettingsModel\MenuSubCategoryModel.cs" />
     <Compile Include="Settings\UserSettingsModel\UserInformationModel.cs" />
+    <Compile Include="test.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SSRL.DAL\SSRL.DAL.csproj">
