--- a/TG.RMSCLIENT.WEB/Web.config
+++ b/TG.RMSCLIENT.WEB/Web.config
@@ -6,7 +6,7 @@
 
 <configuration>
 	<connectionStrings>
-		<add name="Arup" connectionString="Data Source=sv9.dbsqlserver.com,8888;Initial Catalog=RMSDB;User ID=devscraft;Password=moinul9391;Integrated Security=true;" providerName="System.Data.SqlClient"/>
+		<add name="Arup" connectionString="Data Source=sv9.dbsqlserver.com,8888;Initial Catalog=RMSDB;User ID=devscraft;Password=moinul9391;" providerName="System.Data.SqlClient"/>
   <!--<add name="Arup" connectionString="Data Source=.;Initial Catalog=RMS;User ID=sa;Password=sa123;Integrated Security=true;" providerName="System.Data.SqlClient"/>-->
 	</connectionStrings>
   <appSettings>
