--- a/TG.RMSCLIENT.WEB/Web.config
+++ b/TG.RMSCLIENT.WEB/Web.config
@@ -6,8 +6,9 @@
 
 <configuration>
 	<connectionStrings>
-		<add name="Arup" connectionString="Data Source=sv9.dbsqlserver.com,8888;Initial Catalog=RMSDB;User ID=devscraft;Password=moinul9391;" providerName="System.Data.SqlClient"/>
+		<!--<add name="Arup" connectionString="Data Source=sv9.dbsqlserver.com,8888;Initial Catalog=RMSDB;User ID=devscraft;Password=moinul9391;" providerName="System.Data.SqlClient"/>-->
   <!--<add name="Arup" connectionString="Data Source=.;Initial Catalog=RMS;User ID=sa;Password=sa123;Integrated Security=true;" providerName="System.Data.SqlClient"/>-->
+   <add name="Arup" connectionString="Data Source=DESKTOP-KS5AM1C\ATIQUERAHMAN;Initial Catalog=RMS_20170403;User ID=sa;Password=sa@1230;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
