--- a/TG.RMSCLIENT.WEB/TG.RMSCLIENT.WEB.csproj
+++ b/TG.RMSCLIENT.WEB/TG.RMSCLIENT.WEB.csproj
@@ -122,6 +122,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\CustomActionFilter.cs" />
+    <Compile Include="Security\CustomAuthorizeAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -338,6 +339,7 @@
     <Content Include="image\ajax-loader1.gif" />
     <Content Include="image\ajax-loader.gif" />
     <Content Include="image\facebook.gif" />
+    <Content Include="image\Logo.png" />
     <Content Include="JavascriptFile\Common\JQCommon.js" />
     <Content Include="JavascriptFile\css\ui.jqgrid-bootstrap-ui.css" />
     <Content Include="JavascriptFile\css\ui.jqgrid-bootstrap.css" />
