--- a/TG.RMSCLIENT.WEB/Web.config
+++ b/TG.RMSCLIENT.WEB/Web.config
@@ -6,7 +6,7 @@
 
 <configuration>
 	<connectionStrings>
-		<add name="Arup" connectionString="Data Source=sv9.dbsqlserver.com,8888;Initial Catalog=RMSDB;User ID=devscraft;Password=moinul9391;Integrated Security=true;" providerName="System.Data.SqlClient"/>
+		<add name="Arup" connectionString="Data Source=sv9.dbsqlserver.com,8888;Initial Catalog=RMSDB;User ID=devscraft;Password=moinul9391;" providerName="System.Data.SqlClient"/>
   <!--<add name="Arup" connectionString="Data Source=.;Initial Catalog=RMS;User ID=sa;Password=sa123;Integrated Security=true;" providerName="System.Data.SqlClient"/>-->
 	</connectionStrings>
   <appSettings>
@@ -15,6 +15,13 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="SMTP" value="smtp.gmail.com" />
+    <add key="email_sender" value="moinulmithu@gmail.com" />
+    <add key="sender_name" value="TRI-Geek" />
+    <add key="email_CC" value="moinulmithu@gmail.com" />
+    
+    <add key="email_body" value="Please find the enclosed statement of your account. Thanks(test)&lt;/br&gt; &lt;/br&gt; &lt;div&gt; &lt;img alt='Logo' src='../Content/Images/logo.gif'&gt;&lt;/div&gt;" />
+    <!--<add key="email_logo_path" value="../Content/Images/logo.gif" />-->
   </appSettings>
 
   <system.web>
@@ -34,7 +41,19 @@
       </namespaces>
     </pages>
   </system.web>
-
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network"
+            from="moinulmithu@gmail.com">
+        <network host="smtp.gmail.com"
+                 port="587"
+                 enableSsl="true"
+                 defaultCredentials="false"
+                 userName="moinulmithu@gmail.com"
+                 password="Id.45091600" />
+      </smtp>
+    </mailSettings>
+  </system.net>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
      
