--- a/TG.RMSCLIENT.WEB/TG.RMSCLIENT.WEB.csproj
+++ b/TG.RMSCLIENT.WEB/TG.RMSCLIENT.WEB.csproj
@@ -138,6 +138,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="1.html" />
+    <Content Include="2.html" />
     <Content Include="assets\css\ace-ie.min.css" />
     <Content Include="assets\css\ace-part2.min.css" />
     <Content Include="assets\css\ace-rtl.min.css" />
