--- a/TG.RMSCLIENT.WEB/Web.config
+++ b/TG.RMSCLIENT.WEB/Web.config
@@ -6,7 +6,7 @@
 
 <configuration>
 	<connectionStrings>
-		<add name="Arup" connectionString="Data Source=sv9.dbsqlserver.com,8888;Initial Catalog=RMSDB;User ID=devscraft;Password=moinul9391;" providerName="System.Data.SqlClient"/>
+		<add name="Arup" connectionString="Data Source=sv9.dbsqlserver.com,8888;Initial Catalog=RMSDB;User ID=devscraft;Password=moinul9391;" providerName="System.Data.SqlClient" />
   <!--<add name="Arup" connectionString="Data Source=user\sql12;Initial Catalog=RMS;User ID=sa;Password=sa123;Integrated Security=true;" providerName="System.Data.SqlClient"/>-->
    <!--<add name="Arup" connectionString="Data Source=DESKTOP-KS5AM1C\ATIQUERAHMAN;Initial Catalog=RMS_20170403;User ID=sa;Password=sa@1230;" providerName="System.Data.SqlClient"/>-->
 	</connectionStrings>
@@ -44,14 +44,8 @@
   </system.web>
   <system.net>
     <mailSettings>
-      <smtp deliveryMethod="Network"
-            from="moinulmithu@gmail.com">
-        <network host="smtp.gmail.com"
-                 port="587"
-                 enableSsl="true"
-                 defaultCredentials="false"
-                 userName="moinulmithu@gmail.com"
-                 password="Id.45091600" />
+      <smtp deliveryMethod="Network" from="moinulmithu@gmail.com">
+        <network host="smtp.gmail.com" port="587" enableSsl="true" defaultCredentials="false" userName="moinulmithu@gmail.com" password="Id.45091600" />
       </smtp>
     </mailSettings>
   </system.net>
@@ -66,4 +60,13 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers></system.webServer>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+
 </configuration>
