--- a/TG.RMSCLIENT.WEB/TG.RMSCLIENT.WEB.csproj
+++ b/TG.RMSCLIENT.WEB/TG.RMSCLIENT.WEB.csproj
@@ -278,7 +278,7 @@
     <Content Include="assets\img\menu\item-7.jpg" />
     <Content Include="assets\img\menu\item-8.jpg" />
     <Content Include="assets\img\menu\item-9.jpg" />
-    <Content Include="assets\img\menu\Star-blank.jpg" />
+    <Content Include="assets\img\menu\Star-blank.png" />
     <Content Include="assets\img\menu\Star-Shape.png" />
     <Content Include="assets\img\news\1.jpg" />
     <Content Include="assets\img\news\2.jpg" />
